# mc_panda

./: .clang-format-common.sh  .gitignore  .mergify.yml  .nvim.lua  CMakeLists.txt  LICENSE  README.md  flake.nix
.github/workflows/: build.yml  package.yml
.github/workflows/sources/: package.yml
cmake/: Config.cmake.in
data/: CMakeLists.txt
data/cnoid/common/: clear-omninames.sh
data/cnoid/panda_foot/: PDcontroller.conf.choreonoid
data/cnoid/panda_hand/: Virtual-panda_hand-RTC.conf
data/convex/panda_default/: panda_link2-ch.txt  panda_link3-ch.txt  panda_link5-ch.txt  panda_link7-ch.txt
data/convex/panda_foot/: panda_foot-ch.txt
data/fr1/: CMakeLists.txt
data/fr1/cnoid/common/: robot.conf  rtc.conf.choreonoid  sim_mc.cnoid  sim_mc_withTable.cnoid
data/fr1/cnoid/panda_default/: sim_mc.py
data/fr1/cnoid/panda_hand/: PDcontroller.conf.choreonoid  joint_positions.cnoid
data/fr1/cnoid/panda_pump/: joint_positions.cnoid
data/fr1/convex/panda_default/: panda_link0-ch.txt  panda_link1-ch.txt  panda_link4-ch.txt  panda_link6-ch.txt
data/fr1/convex/panda_pump/: panda_pump-ch.txt
data/fr1/meshes/: pump.dae
data/fr1/meshes/visual/: link1.dae  link6.dae  link7.dae
data/fr1/model/panda/: panda-panda_link0-panda-panda_link0_visual.wrl  panda-panda_link2-panda-panda_link2_visual.wrl  panda-panda_link3-panda-panda_link3_visual.wrl  panda-panda_link4-panda-panda_link4_visual.wrl  panda-panda_link5-panda-panda_link5_visual.wrl  panda-panda_link6-panda-panda_link6_visual.wrl  panda-panda_link7-panda-panda_link7_fixed_joint_lump__panda_foot_visual_1.wrl  panda-panda_link7-panda-panda_link7_visual.wrl  panda-pump-visual.wrl
data/fr1/rsdf/panda_hand/: panda_hand.rsdf
data/fr1/rsdf/panda_pump/: panda_pump.rsdf
data/fr1/urdf/: panda_default.in.urdf
data/fr3/: CMakeLists.txt
data/fr3/urdf/: fr3.in.urdf
data/meshes/: foot.stl  pump.dae
data/meshes/visual/: link3.dae  link5.dae
data/model/panda/: panda-panda_link1-panda-panda_link1_visual.wrl  panda-panda_link7-panda-panda_link7_fixed_joint_lump__panda_hand_visual_1.wrl  panda-panda_rightfinger-panda-panda_rightfinger_visual.wrl  panda_default.wrl  panda_foot.wrl  panda_hand.wrl  panda_pump.wrl
data/rsdf/panda_default/: panda_linkA7.rsdf
data/tools/: CMakeLists.txt
data/tools/alias/: panda_foot.in.yaml  panda_hand.in.yaml  panda_mukca.in.yaml  panda_pump.in.yaml  panda_to_panda_calib.in.yaml
data/tools/meshes/panda_mukca/: mukca.stl
data/tools/meshes/panda_to_panda_calib/: panda_to_panda_calib.stl
data/tools/rsdf/panda_foot/: panda_foot.rsdf
data/tools/urdf/: panda_foot.in.urdf  panda_hand.in.urdf  panda_mukca.in.urdf  panda_pump.in.urdf  panda_to_panda_calib.in.urdf
data/tools/yaml/: panda_foot.in.yaml  panda_hand.in.yaml  panda_mukca.in.yaml  panda_pump.in.yaml  panda_to_panda_calib.in.yaml
data/urdf/: panda_default.urdf  panda_foot.urdf  panda_hand.urdf  panda_pump.urdf
data/xacro/: foot.xacro  hand.xacro  main.gazebo.xacro  main.xacro  panda.gazebo.xacro  panda.xacro  panda_default.urdf.xacro  panda_foot.urdf.xacro  panda_hand.urdf.xacro  panda_pump.urdf.xacro  pump.xacro
debian/: changelog  control  copyright  rules
etc/ForceSensorCalibration/: panda_default.yaml
include/mc_panda/: api.in.h  config.in.h  panda.h  panda_pump.h
include/mc_panda/devices/: Pump.h
include/mc_panda/states/: PandaStop.h  PandaWaitForCollisionState.h  PumpDropOffState.h  PumpStopState.h  PumpVacuumState.h
src/: CMakeLists.txt  api.in.h  config.h.in  module.cpp  panda.cpp  panda.h  panda_pump.cpp
src/controller/: PandaController.cpp  PandaController.h
src/devices/: PandaDevice.cpp  PandaDevice.h  PandaSensor.cpp  PandaSensor.h  Pump.cpp  Pump.h  Robot.cpp  Robot.h
src/states/: CMakeLists.txt  PandaStop.cpp  PandaStop.h  PandaWaitForCollisionState.cpp  PandaWaitForCollisionState.h  PumpDropOffState.cpp  PumpDropOffState.h  PumpDropoffState.cpp  PumpDropoffState.h  PumpStopState.cpp  PumpStopState.h  PumpVacuumState.cpp  PumpVacuumState.h  WaitForCollisionState.cpp  WaitForCollisionState.h  examples.yaml
tests/: CMakeLists.txt  test_linking.cpp  test_module.cpp  test_module.in.h
