add_fsm_data_directory(data)

add_fsm_state_simple(WaitForCollisionState)
add_fsm_state_simple(PandaStop)
add_fsm_state_simple(PumpVacuumState)
add_fsm_state_simple(PumpDropoffState)
add_fsm_state_simple(PumpStopState)
target_link_libraries(WaitForCollisionState PUBLIC mc_panda::devices)
target_link_libraries(PandaStop PUBLIC mc_panda::devices)
target_link_libraries(PumpVacuumState PUBLIC mc_panda::devices)
target_link_libraries(PumpDropoffState PUBLIC mc_panda::devices)
target_link_libraries(PumpStopState PUBLIC mc_panda::devices)
