macro(add_panda_fsm_state NAME)
  add_fsm_state_simple(${NAME})
  target_link_libraries(${NAME} PUBLIC mc_panda::devices)
endmacro()

add_panda_fsm_state(WaitForCollisionState)
add_panda_fsm_state(PandaStop)
add_panda_fsm_state(PumpVacuumState)
add_panda_fsm_state(PumpDropoffState)
add_panda_fsm_state(PumpStopState)
