macro(add_panda_fsm_state NAME)
  add_fsm_state(${NAME} ${CMAKE_CURRENT_SOURCE_DIR}/${NAME}.cpp)
  target_link_libraries(${NAME} PUBLIC mc_panda::devices)
endmacro()

add_panda_fsm_state(PandaWaitForCollisionState)
add_panda_fsm_state(PandaStop)
add_panda_fsm_state(PumpVacuumState)
add_panda_fsm_state(PumpDropOffState)
add_panda_fsm_state(PumpStopState)
